force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/FA_Why_Consumer_cannot_sign_the_form__c.field-meta.xml
<CustomField>
    <fullName>FA_Why_Consumer_cannot_sign_the_form__c</fullName>
    <description>This field is used in Form Assembly</description>
    <label>FA Why Consumer cannot sign the form?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>