force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Home_Care_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Consumer__c</fullName>
    <label>Home Care Consumer</label>
    <referenceTo>Consumer__c</referenceTo>
    <relationshipLabel>Affiliated Providers</relationshipLabel>
    <relationshipName>Provider_Consumer_Affiliations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>