force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Provider_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_s_First_Name__c</fullName>
    <formula>Provider__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider&apos;s First Name</label>
    <type>Text</type>
</CustomField>